vault backup: 2025-06-04 19:42:55